--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         
         <div class="presentation">
             <div class="row">
-                <div class="col col-12 col-md-6">
+                <div class="col col-12 col-md-6 container-photo">
                   <div class="content-photo">
-                      <img src="images/presentation.png" alt="picture vanhoangtrinh" class="img-fluid" data-tilt data-tilt-perspective="2000"/>
+                      <img src="images/presentation.png" alt="picture vanhoangtrinh" class="img-fluid" id="photoofme" data-tilt data-tilt-perspective="2000"/>
                   </div>
                    
                 </div>
