--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                    
                 </div>
                 <div class="col col-12 col-md-6 text-presentation mb-2">
-                   <div>
+                   <div class="px-3 px-md-none text-center text-md-left">
                        <h1>Hello! My name is Hoang. I'm a graphic designer.</h1>
                         <p>Check out what i like to do bellow !</p>
                         <a href="#projects-preview"><button class="btn primary-btn">Let's go !</button></a>
