--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-           <div class="collapse navbar-collapse" id="navbarToggler">
+           <div class="collapse navbar-collapse text-center" id="navbarToggler">
                <a href="index.html" class="navbar-brand"><img src="images/logo_vht.png" alt="logo vanhoangtrinh"/></a>
             
-               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-center">
                     <li class="nav-item">
                         <a  class="active" href="index.html#projects-preview">my work</a>
                     </li>    
