--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Van Hoang Trinh Portfolio</title>
+    <title>Van Hoang Trinh : Graphic design portfolio</title>
+    <meta name="description" content="I'm a student in multimedia and internet. I specialize in illustrations and graphic design. Come check my work !">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="canonical" />
 </head>
 <body>
     <div class="container-fluid">
@@ -24,7 +26,7 @@
                         <a href="about.html">about me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.linkedin.com/in/hoang-trinh-6a8b76149/"><img class="social" src="images/linkedin.svg" /></a><a href="https://www.behance.net/jpvhtrinh5d51"><img class="social" src="images/behance.svg" /></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/hoang-trinh-6a8b76149/"><img class="social" src="images/linkedin.svg" /></a><a target="_blank" href="https://www.behance.net/jpvhtrinh5d51"><img class="social" src="images/behance.svg" /></a>
                     </li>
                 </ul>
            </div>
