--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="canonical" />
+    <link rel="icon" href="images/icon.png" />
 </head>
 <body>
     <div class="container-fluid">
