--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/icon.png" />
 </head>
 <body>
-    <div class="container-fluid mt-xs-2 mt-md-none">">
+    <div class="container-fluid mt-xs-2 mt-md-0">">
         <nav class="navbar navbar-light bg-light fixed-top navbar-expand-md">
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
