--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Van Hoang Trinh : Graphic design portfolio</title>
-    <meta name="description" content="I'm a student in multimedia and internet. I specialize in illustrations and graphic design. Come check my work !">
+    <meta name="description" content="I'm a student in multimedia and internet. I specialize in illustration and graphic design. Come check my work !">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="canonical" />
     <link rel="icon" href="images/icon.png" />
 </head>
 <body>
-    <div class="container-fluid mt-xs-2 mt-md-0">
+    <div class="container-fluid mt-2 mt-md-0">
         <nav class="navbar navbar-light bg-light fixed-top navbar-expand-md">
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
